libfilesys-smbclient-perl (3.1-2) UNRELEASED; urgency=low

  [ gregor herrmann ]
  * debian/control: Added: Vcs-Svn field (source stanza); Vcs-Browser
    field (source stanza); Homepage field (source stanza). Removed: XS-
    Vcs-Svn fields.
  * debian/rules: delete /usr/share/perl5 only if it exists.

  [ Damyan Ivanov ]
  * debian/watch: use dist-vased URL, better pattern

 -- gregor herrmann <gregor+debian@comodo.priv.at>  Tue, 09 Oct 2007 22:29:30 +0200

libfilesys-smbclient-perl (3.1-1) unstable; urgency=low

  * New upstream release (Closes: #329542)
  * Sorry, taking over the package due to its maintainer being MIA,
    putting it in the Debian Perl Group's loving hands

 -- Gunnar Wolf <gwolf@debian.org>  Wed, 29 Nov 2006 19:13:55 -0600

libfilesys-smbclient-perl (1.5-2) unstable; urgency=low

  * Updated 'priority' to extra: libsmbclient, on which this package
    depends, is in the 'extra' group.
  * Updated the 'copyright' file to state upstream's copyright and also
    the copyright of the Debian packaging.

 -- Gunnar Wolf <gwolf@debian.org>  Fri, 19 Dec 2003 11:50:50 -0600

libfilesys-smbclient-perl (1.5-1) unstable; urgency=low

  * New upstream release
  * Update debian/watch to point to the cpan.org site
  * Add a new fix-upstream target which resets the 'x' bit for the files
    in the upstream distribution which are not supposed to have that bit
    set. Also remove the (now redundant) fix to reset the 'x' bit for the
    smb2www.css file. This is now done in debian/rules, so there won't be
    any problems during the build process.
  * Remove the reference to the /usr/share/perl5/ directory if it's empty
    from the resulting .deb.

 -- Amit Shah <amitshah@gmx.net>  Fri, 28 Nov 2003 15:07:37 +0530

libfilesys-smbclient-perl (1.4-1) unstable; urgency=low

  * Initial Release (closes: #218307)
  * Remove all (unnecessary) prompts while building
  * chmod -x all files other than ./configure and t/*.t
  * Enable verbose mode if DH_VERBOSE is set