@@ -11,7 +11,7 @@ http://search.cpan.org/CPAN/authors/id/A/AL/ALIAN/
 Upstream author: Alain Barbet <alian@alianwebserver.com>.
 
 Copyright:
-Copyright 2000 A.Barbet alian@alianwebserver.com.  All rights reserved.
+Copyright 2000-2006 A.Barbet alian@alianwebserver.com.  All rights reserved.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
